# VirtualAudioDevice

./: .gitignore  CMakeLists.txt  README.md  main.cpp
_old/: audio_targets.hpp  audio_targets_windows.cpp  debug.cpp  windows_audio.cpp
alpha/: CMakeLists.txt
audio-files/: CMakeLists.txt  main.cpp  riff.cpp  riff.hpp
beta/: CMakeLists.txt
beta/src/: main.cpp
lib/: WindowsAudioClient.cpp  WindowsAudioDevice.cpp  WindowsAudioEnumerator.cpp  WindowsAudioFormat.cpp  com_init.cpp  windows_audio.hpp
